--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,9 @@ body {
 }
 
 .nav a:hover {
-  color: #000;
+  color: #fff;
+  background-color: #000;
+  text-decoration: underline;
 }
 
 .banner {
