--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,10 @@ body {
   text-decoration: none;
 }
 
-.nav a:hover {
-  color: #fff;
-  background-color: #000;
-  text-decoration: underline;
+a:focus {
+  outline: 3px solid #000;
+  filter: brightness(120%);
+  filter: contrast(120%);
 }
 
 .banner {
